# dsiflipencode

./: .gitignore  CMakeLists.txt  README.md  dsiflipdecode.sln
dsiflipdecode/: adpcm.cpp  adpcm.h  bitmap_image.hpp  dsiflipdecode.vcxproj  dsiflipdecode.vcxproj.filters  flipnote_file.h  flipnote_parser.cpp  flipnote_parser.h  flipnote_parser_audio.cpp  main.cpp  util.cpp  util.h
include/: INIReader.h  adpcm_encoder.h  flipnote_file.h  lodepng.h  util.h
src/: adpcm_encoder.cpp  lodepng.cpp  main.cpp  util.cpp
